ECL 9.1.0:
==========

* Streams:

 - ECL has now a new and more easily extensible implementation of streams, based
   on C structures with a method dispatch table. Apart from code reuse and better
   maintainability, this allows a more sensible design of read/write-sequence.

 - *STANDARD-INPUT*, *{STANDARD,ERROR,TRACE}-OUTPUT* are no longer synonyms to
   *TERMINAL-IO* but directly the input or output streams associated to stdin,
   stdout and stderr.

 - Internally, ECL allows to work with POSIX file descriptors directly, without
   using C streams.

 - POSIX files and C streams now support different external formats. ECL
   understands right now :UTF-8, :UCS-2 (bigendian), :UCS-4 (bigendian),
   :LATIN-1 and :ISO-8859-1. If built _without_ support for Unicode, only the
   last two are available.

 - Readtables now include entries for extended characters.

 - When a string is read, if the characters are base-char, the string is read
   as a base-string.

 - ECL supports external formats. They may be a symbol, denoting the encoding
   or an encoding option, or a list of symbols. Valid symbols are :DEFAULT,
   :LATIN-1, :ISO-8859-1, :UTF-8, :UCS-2, :UCS-4, :CR, :LF and :CRLF. Default
   option is :LF.

* Bugs fixed:

 - (FLOOR X X), (CEILING X X), etc, might return a second value which is a
   signed zero if X is a float with a negative sign.

 - (SXHASH -0.0) != (SXHASH 0.0)

* AMOP:

 - In DEFCLASS, the :TYPE of slots was ignored.

 - ECL now sets the proper value for the SLOT-DEFINITION-INITFUNCTION and
   SLOT-DEFINITION-INITFORM of each effective and direct slot definition.

 - The canonicalized default arguments list now contains functions instead
   of the forms to be evaluated.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***