@@ -1731,6 +1731,10 @@ cl_symbols[] = {
 {KEY_ "CR", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "LF", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "CRLF", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "UCS-2BE", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "UCS-4BE", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "UCS-2LE", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "UCS-4LE", KEYWORD, NULL, -1, OBJNULL},
 
 /* Tag for end of list */
 {NULL, CL_ORDINARY, NULL, -1, OBJNULL}};
